--- a/login.html
+++ b/login.html
@@ -27,28 +27,30 @@
           
             <div class="gc-form-content">
               <label for="email">Email:</label>
-              <input type="email" placeholder="" id="email" required />
+              <input type="email" placeholder="" id="email"/>
+              <a>Required email!</a>
             </div>
             <div class="gc-form-content">
               <label for="senha">Password:</label>
-              <input type="password" placeholder="" id="password"  required />
+              <input type="password" placeholder="" id="password" />
+              <a>Required password!</a>
             </div>
             <div class="gc-form-content">
-              <button type="submit">Access!</button>
+              <button type="submit" id="submit">Access!</button>
             </div>
             <div class="gc-form-content">
-              <p>I don't have an account? <br><a href="/create-account.html">Click here!</a>.</p>
+              <p>I don't have an account? <br><a id="bg-a" href="/create-account.html">Click here!</a>.</p>
             </div>
           </form>
           <div class="gc-form-content footer">
-            <p>Gcheck 2023 - Todos os <br> direitos reservados!</p>
+            <p>Gcheck 2023 - All <br> rights reserved.</p> 
           </div>
         
         </div>
     </div>
 </section>
 
-<script src="/js/script.js">
+<script src="/js/scriptteste.js">
 
 </script>
 </body>
